# Meridian_v1.0.0

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  ENHANCEMENT_PLAN.md  README.md  create_shortcut.vbs  meridian.bat  meridian.spec  package.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
Stock Predictor Module/: CLAUDE_CODE_BRIEF.md  stock_predictor.jsx
scripts/: build.py
scripts/hooks/: hook-cvxpy.py  runtime_hook_cvxpy.py
scripts/installer/: meridian.nsi
src/portopt/: __main__.py  app.py  config.py  constants.py
tests/: conftest.py  test_phase8a_bugfixes.py  test_phase8b_features.py  test_retry.py
tests/backtest/: test_costs.py  test_runner.py
tests/data/: test_cache.py  test_fidelity_auto.py  test_fidelity_transactions.py  test_fred_provider.py  test_fundamental_provider.py  test_importers.py  test_plaid_client.py  test_quality.py  test_tiingo_provider.py  test_transaction_cache.py  test_transaction_models.py
tests/engine/: test_account_optimizer.py  test_constraints.py  test_execution.py  test_factors.py  test_metrics.py  test_monte_carlo.py  test_network.py  test_optimization.py  test_order_manager.py  test_prediction.py  test_regime.py  test_returns.py  test_risk.py  test_risk_budgeting.py  test_rolling.py  test_strategy_compare.py  test_stress.py  test_tax_harvest.py
tests/gui/: test_fidelity_flow.py  test_integration.py  test_order_panel.py  test_plaid_controller.py  test_prediction_gui.py  test_sankey_panel.py  test_smoke.py  test_stress.py  test_theme.py  (+1 more)
(+138 files in other folders)
